<resources>
    <string name="app_name">৩০ দিনে ইংরেজী শিক্ষা</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">৩০ দিনে ইংরেজী শিক্ষা</string>
    <string name="nav_header_subtitle">mstrubiakther2022@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="a1">ইংরেজি শেখার আগে কিছু কথা না বললেই নয়, আমাদের অ্যাপটি আপনাদের ইংরেজি বলা এবং লেখার জন্য প্রস্তুত করে দেবে ইনশাআল্লাহ। আপনাকেও ঠিক একই ভাবে নিচের উপায় গুলো অনুসরণ করে নিজেকে প্রস্তুত করতে হবে। একই সাথে এখানে দেওয়া ৩০ টি ক্লাস ভাল ভাবে, সময় নিয়ে বুঝতে হবে এবং আত্মস্থ করতে হবে। প্রতিটি ক্লাস ১ দিন করে অনুশীলন করুন এবং ৩০ দিনেই হয়ে উঠুন ইংরেজিতে দক্ষ। ইনশাআল্লাহ ইংরেজিতে আর কখনই ঠেকবেন না কোথাও।
আমাদের এই অ্যাপটিতে ইংরেজি সহজ ভাবে শিখার জন্য ৩০ টি অত্যন্ত গুরুত্ত্বপূর্ণ ক্লাস নির্ভুল ভাবে সংযোজন করা হয়েছে, যাতে সবাই আত্ত্ববিশ্বাসের সাথে অ্যাপটি ব্যাবহার করতে পারেন।সময় এখন এমন যে, ইংরেজি জানা ছাড়া কোন কিছু চিন্তাও করা যায় না। কি চাকরি, কি পড়াশোনা সব জায়গায়ই ইংরেজিতে দক্ষতা এখন সময়ের চাহিদা। বিভিন্ন বহুজাতিক কোম্পানিতে ভালো চাকরি পেতে হলে ভালো ইংরেজি বলতে পারার কোন বিকল্প নেই। এমনও দেখা যায়, সবরকম যোগ্যতা থাকা স্বত্বেও শুধুমাত্র ইংরেজিতে সাবলীলভাবে কথা বলতে না পারার জন্য চাকরি হয় না। সময় এসেছে এখন সামনে এগিয়ে যাওয়ার, নিজের দক্ষতা বাড়ানোর।
</string>
    <string name="a2">ইংরেজিতে সাবলীলভাবে কথা বলতে চান? তাহলে নীচের টিপসগুলো অনুসরণ করুন</string>
    <string name="a3">
      <b>ভয় করবেন না একদমঃ</b> ইংরেজিতে আপনি হয়তো কথা বলতে চান। কিন্তু আপনার ভয় লাগে। মনে হয়, আপনি ভুলভাল বলে বসবেন, আটকে যাবেন। আশেপাশের সবাই আপনাকে নিয়ে হাসাহাসি করবে। কে হাসলো বা কি করলো, ওইসব ভুলে যান। আপনি যদি শুরুই না করেন, আপনি কখনোই বুঝতে পারবেন না আপনার কোথায় ভুল হচ্ছে, কোন জায়গায় আপনাকে উন্নতি করতে হবে। কাজেই অহেতুক ভয় অথবা লজ্জ্বা দূর করুন।</string>
    <string name="a4">
       <b>ইংরেজিতে ভাবতে শুরু করুনঃ</b> আমরা যখন কথা বলি, আমাদের মাথার ভিতরে আগে কথাগুলো সাজাই। তারপরেই বলা শুরু করি। এখন আপনি যদি ইংরেজি বলতে গিয়ে বাংলাতেই কথা সাজানো শুরু করেন অথবা ভাবা শুরু করেন, আপনি ভালোভাবে ইংরেজিতে কথা বলতে পারবেন না। কাজেই কথা শুরু করার আগে ইংরেজিতে চিন্তা করতে শিখুন। ভাবতে শিখুন। ইংরেজিতেই কথা সাজাতে শিখুন আপনার মস্তিষ্কে।</string>
    <string name="a5">
       <b>শব্দ ভান্ডার বাড়ানঃ</b> এটা একটা খুবই সাধারণ সমস্যা, কথা বলতে গিয়ে উপযুক্ত শব্দ খুঁজে না পাওয়া। এই সমস্যার সমাধান একটাই। সেটা হচ্ছে ইংরেজিতে Vocabulary বাড়ানো। প্রতিদিনই চেষ্টা করুন নতুন নতুন কিছু শব্দ শিখতে। <b>আপনাদের সুবিধার্থে অ্যাপসটির শেষের দিকে কিছু প্রয়োজনীয় শব্দের অর্থ (Vocabulary) দিয়ে দিলাম সেখন থেকে সহজ শব্দগুলোই শিখুন যেগুলো আপনি কথা বলার সময় ব্যবহার করত পারবেন।</b></string>
    <string name="a6">
        <b>মিডিয়াকে কাজে লাগানঃ</b> ইংরেজিতে কথা বলার ক্ষেত্রে আপনি বিভিন্ন মিডিয়া অথবা মাধ্যমের সাহায্য নিতে পারেন। ইংরেজি বই, ইংরেজি পত্রিকা পড়ুন। টেলিভিশনের ইংরেজি সংবাদ, বিভিন্ন প্রোগ্রাম দেখুন। ইংরেজি মুভি দেখুন। সম্ভব হলে Subtitle সহ দেখুন। এতে আপনার শেখাটা অনেক তাড়াতাড়ি হবে।</string>
    <string name="a7">
        <b>অনুশীলন করুনঃ</b> অনুশীলনের বিকল্প নেই, প্রয়োজনে আপনি ঘরের দরজা বন্ধ করে আয়নার সামনে দাঁড়িয়ে ইংরেজিতে কথা বলা অনুশীলন করুন এবং নিজের Voice রেকর্ড করে শুনুন। এতে আপনার Confidence বাড়বে, নিজের ভুলগুলোও বুঝতে পারবেন। ইনশাল্লাহ এটা খুবই কাজে দেয়, করেই দেখুন একবার।</string>
    <string name="a8">
        <b>সমমনা বন্ধু খুঁজে নিনঃ</b> এমন কিছু বন্ধু খুঁজে বের করুন, যারা আপনারই মতো ইংরেজিতে কথা বলা শিখতে চান। তাদের সাথে প্রতিদিন একবার হলেও বসে ইংরেজিতে কথা বলার চর্চা করুন। সেটা ১ ঘন্টার জন্য হলেও। এভাবে ৫/৬ জন মিলে প্রতিদিন ইংরেজিতে কথা বলতে থাকলে আপনি নিজেও বুঝতে পারবেন না যে কত দ্রুত আপনি ইংরেজিতে দক্ষভাবে কথা বলতে শিখে গেছেন।\nনিজের ইচ্ছাশক্তিকে কাজে লাগিয়ে এগিয় যান। আপনিই সফল হবেন ইনশাল্লাহ।</string>
    <string name="a9">
        এইঅ্যাপটিতে মোট ৩০ টি ক্লাস আছে। আজ আমরা ১ম ক্লাসটি শুরু করবো। অলসতা না করে করে প্রথম থেকে শেষ পর্যন্ত প্রত্যেকটি ক্লাসই খুব ভালোভাবে মনযোগ সহকারে করবেন ভয় পাবেননা ক্লাস গুলো খুবই সহজ। তাছাড়া বাংলা অর্থ ও উচ্চারণ দেওয়া আছে যাতে আপনাদের বুঝতে আরো সহজ হয় তবে একটি কথা যারা ইংরেজিতে দুর্বল বা কথা বলতে পারেননা তাদের জন্য সর্বাধিক উপকারী এই অ্যাপটি আর যারা ইংরেজি জানেন কিন্তু কথা বলতে পারেন না তাদের জন্য ও অধিক উপকারি হবে ইনশাআল্লাহ্।আপনি ইংরেজিতে কথা বলার আগে যত বেশি চিন্তা করবেন, ততই আপনি নার্ভাসনেসে ভুগতে শুরু করবেন। এতকিছু চিন্তা না করে বলা শুরু করুন। প্রথম প্রথম খুব বেশি পারছেন না? চিন্তার কোন কারণ নেই। ধীরে ধীরে সময় বাড়ান। আজকে ২ মিনিট, কালকে ৫ মিনিট। তারপর ১০ মিনিট, ১৫ মিনিট করে বলার অনুশীলন করুন। নিজেও বুঝবেন না, কীভাবে আপনি ইংরেজিতে সাচ্ছন্দে কথা বলতে শিখে গেছেন।</string>
    <string name="a10"><b>let\'s = (লেট\'স)</b>= চলো\n\n<b>start = (স্টার্ট)</b>= শুরু করা\n\n
<b>with = (উইথ)</b>=  সাথে\n\n
<b>english = (ইংলিশ)</b>=  ইংরেজী\n\n
Let\'s start with english! = (লেট\'স স্টার্ট উইথ ইংলিশ) = চলো ইংরেজীতে শুরু করি! \n\n<b>I = (আই)</b> = আমি\n\n
<b>like = (লাইক)</b> = পছন্দ করা\n\n
I like = (আই লাইক) = আমি পছন্দ করি।\n\n<b>you = (ইউ) </b> = তুমি\n\n
I like you = (আই লাইক ইউ) = আমি তোমাকে পছন্দ করি।\n\n

<b>your = (ইয়োর) </b> = তোমার\n\n
<b>smile = (স্মাইল) </b> = হাসি\n\n
I like your smile = (আই লাইক ইয়োর স্মাইল) = আমি তোমার হাসি পছন্দ করি।\n\n

<b>how = (হাউ) </b> = কেমন\n\n
<b>are = (আর) </b> = হয়কি? / আছে / হই এসব অর্থে ব্যাবহার হয়।\n\n
How are you? = (হাউ আর ইউ?) = তুমি কেমন আছ? \n\n

<b>that = (দ্যাট) </b> = যার\n\n
<b>means = (মিন্স) </b>= মানে\n\n
That means = (দ্যাট মিন্স) = যার মানে\n\n

    <b>fine = (ফাইন) </b>= ভাল\n\n
    Are you fine? = (আর ইউ ফাইন?) = তুমি ভাল আছ? \n\n

    <b>am = (এ্যাম)</b> = আছ / হয় / হই এসব অর্থে ব্যাবহার হয়।\n\n
    I am fine = (আই এ্যাম ফাইন) = আম ভাল আছি।\n\n

    <b>and = (এ্যান্ড) </b> = এবং\n\n
    And you? = (এ্যান্ড ইউ) = এবং তুমি? (তার মানে আমি ভাল এবং তুমি কেমন আছ?) \n\n

    <b>also = (অলসো) </b> = ও\n\n
    I am also fine = (আই এ্যাম অলসো ফাইন) = আমিও ভাল আছি।\n\n

    <b>is = (ইজ) </b> = হয়\n\n
    <b>not = (নট) </b> = না\n\n
    <b>bad = (ব্যাড) </b> = খারাপ\n\n
    He is not bad = (হি ইজ নট ব্যাড) = সে খারাপ না।\n\n

    <b>bed = (বেড) </b> = বিছানা\n\n
    (এখানে মনে রাখবেন bed-অর্থ বিছানা আর bad-অর্থ খারাপ এখানে বানান মনে রাখতে হবে) \n\n

    <b>this = (দিস) </b> = ইহা\n\n
    <b>my = (মাই) </b>= আমার\n\n
    This is my bed = (দিস ইজ মাই বেড) = ইহা আমার বিছানা।\n\n

    <b>what = (হোয়াট) </b> = কি? \n\n
    <b>do = (ডু) </b> = করা\n\n
    <b>mean = (মিন) </b> = মানে / অর্থ বুঝাতে\n\n
    What do you mean? = (হোয়াট ডু ইউ মিন?) = তুমি কি বুঝাতে চাইছ? \n\n    <b>have = (হেভ) ) </b> = আছে\n\n
    <b>nothing = (নাথিং) </b> = কিছুনা\n\n
    <b>to = (টু) </b> = প্রতি\n\n
    <b>say = (ছে) </b> = বলা\n\n
    I have nothing to say = (আই হেভ নাথিং টু ছে) = আমার কিছু বলার নাই।\n\n

    <b>can = (ক্যান) </b> = পারা\n\n
    <b>share = (শেয়ার) </b> = অংশীদার\n\n
    <b>me = (মি) </b> = আমাকে\n\n
    <b>about = (এবাউট) </b> = সম্পর্কে / বিষয়ে\n\n
    <b>problem = (প্রবলেম) </b>= সমস্যা\n\n
    You can share with me about your problem = (ইউ ক্যান শেয়ার উইথ মি এবাউট ইয়োর প্রবলেম) = তুমি তোমার সমস্যার বিষয়ে আমাক বলতে পার।\n\n

    <b>I mean = (আই মিন) </b> = আমি বুঝাতে চাই\n\n
    I mean what is your problem? = (আই মিন হোয়াট ইজ ইয়োর প্রবলেম) = আমি বুঝাতে চাই তোমার সমস্যাটা কি? \n\n

    <b>listen = (লিসেন) ) </b> = কথাশোনা\n\n
    Listen to me = (লিসেন টু মি) = আমার কথা শোন।\n\n

    <b>please = (প্লিজ) ) </b> = অনুগ্রহ / দয়া করে\n\n
    Please listen = (প্লিজ লিসেন) = দয়া করে আমার কথা শোন।\n\n

    <b>thanks = (থ্যাংকস) ) </b> = ধন্যবাদ\n\n
    <b>a lot = (এ লট) ) </b> = অনেক\n\n
    Thanks a lot = (থ্যাংকস এ লট) = অনেক ধন্যবাদ।\n\n

    <b>how = (হাউ) ) </b> = কিভাবে\n\n
    <b>make = (মেইক) ) </b> = বানানো\n\n
    <b>design = (ডিজাইন) ) </b> = ডিজাইন / নকশা\n\n
    How to make a design? = (হাউ টু মেইক এ ডিজাইন?) = কিভাবে একটি ডিজাইন বানাতে হয়? \n\n

    <b>home = (হোম) </b>= বাড়ি\n\n
    How to make a home? = (হাউ টু মেইক এ হোম?) = কিভাবে একটি বাড়ি বানাতে হয়? \n\n

    এই বাক্যটি দিয়ে অনেক বাক্য বানাতে পারবেন\n\n    যেমনঃ-\n\n

    কিভাবে গাড়ি বানাতে হয়? {car-কার-গাড়ি}।\n\n

    কিভাবে মোবাইল বানাতে হয়? {mobile-মোবাইল-মোবাইল}।\n\n

    কিভাবে টাকা বানাতে হয়? {money-মানি-টাকা}।\n\n

    কিভাবে জামা বানাতে হয়? {dress-ড্রেস-জামা}।\n\n

    কিভাবে জুতা বানাতে হয়? {show-শু-জুতা}।\n\n

    এভাবে অনেক কিছু শিখতে পারবেন শুধু চেষ্টা করতে থাকুন। শুধু এটাই নয় সবগুলো শব্দ ও বাক্য দিয়ে মিলিয়ে চেষ্টা করলেই ১০০% ভাল ফল পাওয়া যাবে) \n\n

    <b>can = (ক্যান) </b> = পারা\n\n
    Can I help you? = (ক্যান আই হেল্প ইউ?) = আমি কি আপনাকে সাহায্য করতে পারি? \n\n

    <b>how = (হাউ) </b> = কেমন\n\n
    <b>help = (হেল্প) </b> = সাহায্য\n\n
    How can I help you? = (হাউ ক্যান আই হেল্প ইউ?) = আমি কিভাবে আপনাকে সাহায্য করতে পারি? \n\n

    <b>tell = (টেল) </b> = বলা\n\n
    <b>problem = (প্রবলেম) ) </b>= সমস্যা\n\n    Tell me, what\'s your problem = (টেল মি হোয়াট\'স ইয়োর প্রবলেম?) = আমাকে বল, তোমার কি সমস্যা? \n\n

    <b>some = (ছাম) </b> = কিছু\n\n
    I have some problems = (আই হেভ ছাম প্রবলেমস) = আমার কিছু সমস্যা আছে।\n\n

    <b>will = (উইল) </b> = করব / হব\n\n
    <b>call = (কল) </b> = ডাকা / কল করা\n\n
    I will call you = (আই উইল কল ইউ) =আমি তোমাকে কল করব অথবা ডাকব।\n\n

    <b>later = (লেইটার) </b> = পরে\n\n
    I will call you later = (আই উইল কল ইউ লেইটার) = আমি তোমাকে পরে ডাকব অথবা কল করব।\n\n

    <b>tomorrow = (টুমোরো) </b> = আগামীকাল\n\n
    I will call you tomorrow = (আই উইল কল ইউ টুমোরো) = আমি তোমাকে আগামীকাল কল করবো।\n\n

    <b>back = (ব্যাক) </b>= পিছনে / পুনরায়\n\n
    I will call you back = (আই উইল কল ইউ ব্যাক) = আমি তোমাকে পুনরায় কল করব।\n\n

    <b>go = (গো) </b> = যাওয়া\n\n
    <b>sleep = (স্লিপ) </b>= শুতে / ঘুমোতে যাওয়া\n\n
    I will go to sleep = (আই উইল গো টু স্লিপ) = আমি শুতে যাবো।\n\n

    <b>now = (নাউ) </b> = এখন\n\n
    I will go to sleep now = (আই উইল গো টু স্লিপ নাউ) = আমি এখন শুতে যাবো।\n\n

    <b>shop = (শপ) </b> = দোকান\n\n
    I will go to shop now = (আই উইল গো টু শপ নাউ) = আমি এখন দোকানে যাব।

</string>
    <string name="a11">ইংরেজি না জানার জন্য নিজেকে অহেতুক দোষারোপ করবে নাঃ আপনার ইংরেজি জ্ঞানের স্বল্পতা থাকতেই পারে। কিন্তু সেজন্য নিজেকে কখনোই দোষারোপ করবেন না! আপনি তো শিখতেই চাচ্ছেন এখন। কখনো না শেখার চেয়ে দেরিতে শেখাই কি ভালো না?\n\n

অনুশীলনের বিকল্প নেই, প্রয়োজনে আপনি ঘরের দরজা বন্ধ করে আয়নার সামনে দাঁড়িয়ে ইংরেজিতে কথা বলা অনুশীলন করুন এবং নিজের Voice রেকর্ড করে শুনুন। এতে আপনার Confidence বাড়বে, নিজের ভুলগুলোও বুঝতে পারবেন। ইনশাল্লাহ এটা খুবই কাজে দেয়, করেই দেখুন একবার।
</string>
</resources>