<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fast_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/two_color_curved"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="প্রথমেই যেটা করতে হবে"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/two_color_curved"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/a2"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/kalpurush"
                android:text="@string/a8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>